Migrated to Angular 2.0.0-rc.4

--- a/webapp/app/home/Login.html
+++ b/webapp/app/home/Login.html
@@ -28,5 +28,9 @@
 			<a class="link-sign-up"
 			   href="#">Sign up</a>
 		</div>
+		<div class="form-group">
+			<a href="{{facebookLoginUrl}}">Facebook</a>
+			<a href="{{gitHubLoginUrl}}">GitHub</a>
+		</div>
 	</form>
 </div>
